...
    <string name="entity_attribute_checkbox">Append attribute value</string>
    <string name="entity_id">Entity ID</string>
    <string name="entity_id_name">Entity ID: %1$s</string>
    <string name="entity_widget_desc">View any entity\'s current state and toggle it</string>
    <string name="todo_widget_desc">View any configured to-do list and mark items as completed</string>
    <string name="error_auth_revoked">It appears that your authorization was revoked, please reconnect to Hivebit.</string>
    <string name="error_connection_failed">Unable to connect to Hivebit.</string>
    <string name="error_connection_failed_to">Unable to connect to %1$s</string>
    <string name="error_connection_failed_no_network">Network unavailable, please check your connection</string>
    <string name="error_loading_entities">Error loading entities</string>
    <string name="error_onboarding_connection_failed">Unable to connect to Hivebit.</string>
    <string name="error_ssl">Unable to communicate with Hivebit because of a SSL error. Please ensure your certificate is valid.</string>
    <string name="error_with_registration">The \'Mobile App\' integration is required to use the app, but it is not available on your Hivebit server. Please check your server configuration and try again.</string>
...
    <string name="gesture_name_swipe_right_two">Swipe right using two fingers</string>
    <string name="gesture_name_swipe_right_three">Swipe right using three fingers</string>
    <string name="gesture_name_swipe_up_two">Swipe up using two fingers</string>
    <string name="gesture_name_swipe_up_three">Swipe up using three fingers</string>
    <string name="gestures_pointers_two">Using two fingers</string>
    <string name="gestures_pointers_three">Using three fingers</string>
    <string name="get_help">Get help</string>
    <string name="grant_permission">Grant permission</string>
    <string name="help">Help</string>
    <string name="hide">Hide</string>
    <string name="hide_password">Hide password</string>
    <string name="high_accuracy_mode_channel_name">High accuracy location</string>
    <string name="high_accuracy_mode_notification_title">High accuracy (GPS) mode enabled</string>
...
    <string name="sensor_description_high_accuracy_interval">The update interval set for high accuracy mode</string>
    <string name="update">Update</string>
    <string name="weather">Weather</string>
    <string name="zone">Zone</string>
    <string name="tls_cert_title">TLS client certificate error</string>
    <string name="tls_cert_not_found_message">The remote site requires a client certificate.\nPlease install the required credential on your phone and try again.</string>
    <string name="tls_cert_expired_message">The certificate is not yet or no longer valid.\nPlease install a new credential on your phone and try again.</string>
    <string name="tls_cert_onboarding_description">If your Hivebit instance requires TLS client certificate authentication, select a TLS client certificate file to install it on your Wear OS device.</string>
    <string name="tls_cert_onboarding_title">TLS client certificate</string>
    <string name="basic_sensor_name_battery_power">Battery power</string>
    <string name="widget_checkbox_require_authentication">Require authentication</string>
    <string name="widget_error_authenticating">Error authenticating - is an authentication method configured?</string>
    <string name="sensor_description_battery_power">The current wattage of the device. To get the most out of this sensor consider using the \"Fast while charging\" sensor update frequency setting.
...
    <string name="manual_server_wrong_url">Invalid Home\u00A0Assistant address</string>
    <string name="connection_screen_malformed_url">Verify that your Home\u00A0Assistant address is correct</string>
    <string name="clear_text">Clear text</string>
    <string name="local_first_title">Local by default.\nRemote when you\'re ready.</string>
    <string name="local_first_content">Your Home\u00A0Assistant is only accessible on your home network. To control your smart home from anywhere, you can set up remote access later in your settings.\n\nFor now, you\'re securely connected to your local network.</string>
    <string name="local_first_next">Got it</string>
    <string name="location_sharing_title">Use this device\'s location for automations</string>
    <string name="location_sharing_content">Location sharing enables powerful automations, such as turning off the heating when you leave home. This option shares the device\'s location only with your Hivebit system.\n\nThis data stays in your home and is never sent to third parties. It also helps strengthen the security of your connection to Hivebit.</string>
    <string name="location_sharing_share">Share my location</string>
    <string name="location_sharing_no_share">Do not share my location</string>
    <string name="location_secure_connection_title">Let us help secure your remote connection</string>
    <string name="location_secure_connection_content">It appears that your connection is not encrypted (using HTTP). If the app knows when you\'re away from home, it can choose a more secure way to connect to your Hivebit system if available. This requires location services to be enabled.</string>
    <string name="location_secure_connection_hint">This data will never be shared with the Hivebit project or third parties.</string>
    <string name="location_secure_connection_next">Next</string>
    <string name="location_secure_connection_save">Save</string>
    <string name="location_secure_connection_discard_permission">Location permission denied. Allow access or choose the \'Less secure\' option.</string>
...
    <string name="wear_mtls_open_error">This password does not open this file.</string>
    <string name="wear_mtls_deselect_file">Deselect file</string>
    <string name="set_home_network_title">What is your home network?</string>
    <string name="set_home_network_wifi_name">Name of the Wi-Fi network at home</string>
    <string name="set_home_network_content">For the best experience, Hivebit needs to know when you’re connected to your home network.</string>
    <string name="set_home_network_next">Next</string>
    <string name="connection_error_url_info">The app is currently connecting to</string>
    <string name="connection_error_more_details">More details</string>
    <string name="connection_error_more_details_description">Description</string>
    <string name="connection_error_more_details_description_content">Status Code: %1$s\nDetail: %2$s</string>
    <string name="connection_error_more_details_error">Error</string>
    <string name="connection_error_help">Get more help</string>
    <string name="connection_error_discord_content_description">Hivebit Discord</string>
    <string name="connection_error_documentation_content_description">Hivebit Documentation</string>
    <string name="connection_error_forum_content_description">Hivebit Forum</string>
    <string name="connection_error_github_content_description">Hivebit GitHub</string>
    <string name="connection_error_unknown_error">There was an error loading Hivebit. Please review the connection settings and try again.</string>
    <string name="back">Back</string>
</resources>

