...
import io.hivebit.companion.android.compose.composable.HATopBarPlaceholder
import io.hivebit.companion.android.onboarding.R

private val MaxContentWidth = MaxButtonWidth

@VisibleForTesting
internal const val URL_INFO_TAG = "url_info"

private const val URL_DOCUMENTATION = "https://companion.home-assistant.io/docs/troubleshooting/faqs/"
private const val URL_COMMUNITY_FORUM = "https://community.home-assistant.io/c/mobile-apps/android-companion/42"
private const val URL_GITHUB_ISSUES = "https://github.com/home-assistant/android/issues"
private const val URL_DISCORD = "https://discord.com/channels/330944238910963714/1284965926336335993"

...
